--- a/EHP_Implementacion/EHP_I_Codf/backend/package.json
+++ b/EHP_Implementacion/EHP_I_Codf/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "backend": "file:",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
