--- a/EHP_Implementacion/EHP_I_Codf/backend/package.json
+++ b/EHP_Implementacion/EHP_I_Codf/backend/package.json
@@ -14,6 +14,7 @@
     "backend": "file:",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "node-cron": "^3.0.3",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
