Se agrego envio de Mail y generacion de QR

--- a/EHP_Implementacion/EHP_I_Codf/frontend/package.json
+++ b/EHP_Implementacion/EHP_I_Codf/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "frontend": "file:",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
